import "ydb/core/protos/counters.proto";

package NKikimr.NReplication;
option java_package = "ru.yandex.kikimr.proto";

option (TabletTypeName) = "ReplicationController"; // Used as prefix for all counters

enum ESimpleCounters {
    COUNTER_SIMPLE_IGNORE = 0;
    COUNTER_SESSIONS = 1 [(CounterOpts) = {Name: "Sessions"}];
    COUNTER_WORKERS = 2 [(CounterOpts) = {Name: "Workers"}];
    COUNTER_BOOT_QUEUE = 3 [(CounterOpts) = {Name: "BootQueue"}];
    COUNTER_STOP_QUEUE = 4 [(CounterOpts) = {Name: "StopQueue"}];
    COUNTER_DATA_LAG = 5 [(CounterOpts) = {Name: "DataLag"}];
    COUNTER_PENDING_VERSIONS = 6 [(CounterOpts) = {Name: "PendingVersions"}];
    COUNTER_ALLOCATED_TX_IDS = 7 [(CounterOpts) = {Name: "AllocatedTxIds"}];
    COUNTER_ASSIGNED_TX_IDS = 8 [(CounterOpts) = {Name: "AssignedTxIds"}];
    COUNTER_WORKERS_WITH_HEARTBEAT = 9 [(CounterOpts) = {Name: "WorkersWithHeartbeat"}];
    COUNTER_WORKERS_PENDING_HEARTBEAT = 10 [(CounterOpts) = {Name: "WorkersPendingHeartbeat"}];
}

enum ECumulativeCounters {
    COUNTER_CUMULATIVE_IGNORE = 0;
    COUNTER_CREATE_SESSION = 1 [(CounterOpts) = {Name: "CreateSession"}];
    COUNTER_DELETE_SESSION = 2 [(CounterOpts) = {Name: "DeleteSession"}];
    COUNTER_TOO_MANY_OPEN_TX_IDS = 3 [(CounterOpts) = {Name: "TooManyOpenTxIds"}];
    COUNTER_TX_IDS_EXHAUSTED = 4 [(CounterOpts) = {Name: "TxIdsExhausted"}];
    COUNTER_ERROR_COMMITTING_CHANGES = 5 [(CounterOpts) = {Name: "ErrorCommittingChanges"}];
}

enum EPercentileCounters {
    option (GlobalCounterOpts) = {
        Ranges { Value: 0 Name: "0 ms" }
        Ranges { Value: 1 Name: "1 ms" }
    };

    COUNTER_PERCENTILE_IGNORE = 0;
}

enum ETxTypes {
    TXTYPE_INIT_SCHEMA = 0 [(TxTypeOpts) = {Name: "TxInitSchema"}];
    TXTYPE_INIT = 1 [(TxTypeOpts) = {Name: "TxInit"}];
    TXTYPE_CREATE_REPLICATION = 2 [(TxTypeOpts) = {Name: "TxCreateReplication"}];
    TXTYPE_DROP_REPLICATION = 3 [(TxTypeOpts) = {Name: "TxDropReplication"}];
    TXTYPE_DISCOVERY_RESULT = 4 [(TxTypeOpts) = {Name: "TxDiscoveryResult"}];
    TXTYPE_ASSIGN_STREAM_NAME = 5 [(TxTypeOpts) = {Name: "TxAssignStreamName"}];
    TXTYPE_CREATE_STREAM_RESULT = 6 [(TxTypeOpts) = {Name: "TxCreateStreamResult"}];
    TXTYPE_CREATE_DST_RESULT = 7 [(TxTypeOpts) = {Name: "TxCreateDstResult"}];
    TXTYPE_DROP_STREAM_RESULT = 8 [(TxTypeOpts) = {Name: "TxDropStreamResult"}];
    TXTYPE_DROP_DST_RESULT = 9 [(TxTypeOpts) = {Name: "TxDropDstResult"}];
    TXTYPE_ALTER_REPLICATION = 10 [(TxTypeOpts) = {Name: "TxAlterReplication"}];
    TXTYPE_RESOLVE_SECRET_RESULT = 11 [(TxTypeOpts) = {Name: "TxResolveSecretResult"}];
    TXTYPE_ALTER_DST_RESULT = 12 [(TxTypeOpts) = {Name: "TxAlterDstResult"}];
    TXTYPE_DESCRIBE_REPLICATION = 13 [(TxTypeOpts) = {Name: "TxDescribeReplication"}];
    TXTYPE_WORKER_ERROR = 14 [(TxTypeOpts) = {Name: "TxWorkerError"}];
    TXTYPE_ASSIGN_TX_ID = 15 [(TxTypeOpts) = {Name: "TxAssignTxId"}];
    TXTYPE_HEARTBEAT = 16 [(TxTypeOpts) = {Name: "TxHeartbeat"}];
    TXTYPE_COMMIT_CHANGES = 17 [(TxTypeOpts) = {Name: "TxCommitChanges"}];
}
